--- a/EngineMathLib/EngineMathLib/EngineMathLib.vcxproj.filters
+++ b/EngineMathLib/EngineMathLib/EngineMathLib.vcxproj.filters
@@ -31,6 +31,12 @@
     <Filter Include="Header Files\Miscellaneous">
       <UniqueIdentifier>{cd29ef42-28cf-4a85-9963-6f6cb80f0e85}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\Memory">
+      <UniqueIdentifier>{30da1f18-1efa-46bb-afef-94c43305906f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Memory">
+      <UniqueIdentifier>{96449b89-74ab-4b4e-a4e7-c4ca67d1f8d7}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\EngineMathLib.cpp">
@@ -38,6 +44,12 @@
     </ClCompile>
     <ClCompile Include="source\Structures.cpp">
       <Filter>Source Files\Structures</Filter>
+    </ClCompile>
+    <ClCompile Include="source\Memory.cpp">
+      <Filter>Source Files\Memory</Filter>
+    </ClCompile>
+    <ClCompile Include="source\MemoryExample1.cpp">
+      <Filter>Source Files\Memory</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -76,6 +88,18 @@
     </ClInclude>
     <ClInclude Include="include\Vectors\Vector4.h">
       <Filter>Header Files\Vectors</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Memory\TSharedPointer.h">
+      <Filter>Header Files\Memory</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Memory\TUniquePtr.h">
+      <Filter>Header Files\Memory</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Memory\TStaticPtr.h">
+      <Filter>Header Files\Memory</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Memory\TWeakPointer.h">
+      <Filter>Header Files\Memory</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
