Refactor namespace to EU and add MeshComponent
Replaced all occurrences of the EngineUtilities namespace with EU across headers and source files for consistency. Updated copyright years to 2025 where applicable. Added a new MeshComponent class in Utilities, and updated project files to include the new header.

--- a/EngineMathLib/EngineMathLib/EngineMathLib.vcxproj
+++ b/EngineMathLib/EngineMathLib/EngineMathLib.vcxproj
@@ -159,6 +159,7 @@
     <ClInclude Include="include\Structures\TPair.h" />
     <ClInclude Include="include\Structures\TSet.h" />
     <ClInclude Include="include\Utilities\EngineMath.h" />
+    <ClInclude Include="include\Utilities\MeshComponent.h" />
     <ClInclude Include="include\Vectors\Quaternion.h" />
     <ClInclude Include="include\Vectors\Vector2.h" />
     <ClInclude Include="include\Vectors\Vector3.h" />
